# convection-parameterization-in-CAM

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  cesm-build-notes.md  nn_ftorch_net_mod.f90  requirements.conda.yaml  requirements.txt
.github/workflows/: python-ci.yml  python-code-quality.yml  test_suite_ubuntu.yml
CAM_interface/: README.md  nn_interface_CAM.F90  phys_control.F90  physpkg.F90  test_cam_interface.f90  user_nl_cam  yog_intr.F90
CAM_mods/: .gitignore  README.md  convect_deep.F90  phys_control.F90  physpkg.F90  user_nl_cam  yog_conv.F90  yog_conv_intr.F90  yog_mod.F90
CAM_mods_v2_2/: README.md  convect_deep.F90  phys_control.F90  physpkg.F90  yog_mod.F90
NN_module/: .Makefile.swp  .compile.sh.swp  CMakeLists.txt  Makefile  README.md  SAM_consts.f90  compile.sh  nn_cf_net.f90  nn_cf_net_torch.f90  nn_convection_flux.f90  nn_convection_flux_mod.f90  nn_convection_flux_torch.f90  nn_interface_CAM.f90  nn_interface_SAM.f90  nn_ones.txt  precision.f90  test.f90  test_cam_interface.f90  test_cam_profile.f90  test_utils.f90  vars.f90
NN_module/resources/: SAM_sounding.nc  requirements.txt  sounding_to_netcdf.py  sounding_z_pres0_presi0_tabs0.txt
NN_module/test/: CMakeLists.txt  param_test.txt  test.f90
YOG_convection/: SAM_consts.F90  nn_convection_flux.F90
YOG_convection/resources/: SAM_sounding.nc  requirements.txt  sounding_to_netcdf.py
profile_test/: CMakeLists.txt  Makefile  NN_test_output.nc  NN_weights_YOG_convection.nc  README.md  SAM_consts.f90  cam_profile.F90  cam_profile.f90  nn_convection_flux.f90  nn_interface_CAM.f90  nn_interface_CAM_uninstrumented.f90  plot_nn_profiles.py  requirements.txt  scam_gateIII_215_YOG_testing.cam.h1.1974-08-30-00000.nc  scam_gateIII_215_YOG_testing.cam.h2.1974-08-30-00000.nc  scam_gateIII_215_ZMmod.cam.h1.1974-08-30-00000.nc  scam_gateIII_215_ZMmod.cam.h2.1974-08-30-00000.nc  test_cam_profile.F90  test_cam_profile.f90  write_nf_data.F90  write_nf_data.f90
profile_test/resources/: sounding_to_netcdf.py
tests/: CMakeLists.txt  test_ann.py  test_utils.F90
tests/test_CAM_interface/: test_cam_interface.F90  test_cam_interface.f90
tests/test_NN_module/: nn_ones.txt  test.f90
tests/test_YOG_convection/: test.f90
torch_nets/: models.py  nn_ones.txt  nn_state.pt  pt2ts.py  saved_model.pt  smoke_test.py  test_python_net.py  torchscript_model.pt  weights.pkl
